Join us non visible si connecté et ajout de style et fix label du nom

--- a/WebContent/resources/css/global.css
+++ b/WebContent/resources/css/global.css
@@ -13,6 +13,10 @@ body {
 	background-color : pink;
 }
 
+.navbar li:hover{
+	background-color : black;
+}
+
 .primary-btn {
 	background-color : black;
 	color : white;
